NIAD-215: Operation id as hash