@@ -1,5 +1,6 @@
 package uk.nhs.digital.nhsconnect.nhais.repository;
 
+import com.google.common.collect.ImmutableList;
 import org.junit.jupiter.api.Test;
 import uk.nhs.digital.nhsconnect.nhais.model.edifact.Interchange;
 import uk.nhs.digital.nhsconnect.nhais.model.edifact.InterchangeHeader;
@@ -9,12 +10,12 @@ import uk.nhs.digital.nhsconnect.nhais.model.edifact.ReferenceTransactionType;
 
 import java.time.Instant;
 import java.time.ZonedDateTime;
-import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class InboundStateTest {
 
+    private static final String OPERATION_ID = "bd0327c35d94d2972b4e0c99e355a8bb5ea2453eb27777d9e1985af38c9c2cf2";
     private static final String SENDER = "some_sender";
     private static final String RECIPIENT = "some_recipient";
     private static final Instant TRANSLATION_TIMESTAMP = ZonedDateTime.now().toInstant();
@@ -23,7 +24,7 @@ public class InboundStateTest {
     private static final long TRANSACTION_NUMBER = 345L;
     private static final ReferenceTransactionType.TransactionType TRANSACTION_TYPE = ReferenceTransactionType.TransactionType.ACCEPTANCE;
 
-    public static final Interchange INTERCHANGE = new Interchange(List.of(
+    public static final Interchange INTERCHANGE = new Interchange(ImmutableList.of(
         new InterchangeHeader(SENDER, RECIPIENT, TRANSLATION_TIMESTAMP)
             .setSequenceNumber(INTERCHANGE_SEQUENCE),
         new MessageHeader()
@@ -33,6 +34,7 @@ public class InboundStateTest {
         new ReferenceTransactionType(TRANSACTION_TYPE)));
 
     public static final InboundState INBOUND_STATE = new InboundState()
+        .setOperationId(OPERATION_ID)
         .setSender(SENDER)
         .setRecipient(RECIPIENT)
         .setReceiveInterchangeSequence(INTERCHANGE_SEQUENCE)
@@ -45,6 +47,6 @@ public class InboundStateTest {
     void whenFromInterchangeCalled_thenInboundStateObjectIsCreated() {
         var inboundStateFromInterchange = InboundState.fromInterchange(INTERCHANGE);
 
-        assertEquals(inboundStateFromInterchange, INBOUND_STATE);
+        assertEquals(INBOUND_STATE, inboundStateFromInterchange);
     }
 }
